--- a/unlisted_web_page_mdisc_karbytes2026_0.html
+++ b/unlisted_web_page_mdisc_karbytes2026_0.html
@@ -393,7 +393,7 @@ karbytes2025_22: // folder contains exactly 163 files (approximately 19409.20 me
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-karbytes2026_0: // folder contains exactly 26 files (approximately ??? megabytes total).
+karbytes2026_0: // folder contains exactly 26 files (approximately 19643.94 megabytes total).
 
     - zip_file_0: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_karbytes_human_genome_fasta_part_0/" target="_blank" rel="noopener">karbytes_human_genome_fasta_part_0-main.zip</a> // 5.2 gigabytes (file checksum SHA-256: f743c543a0337ee622324c652b2e03f2f9db7924e8680bc7aa7fa16919260591)
 
@@ -435,13 +435,13 @@ karbytes2026_0: // folder contains exactly 26 files (approximately ??? megabytes
 
     - zip_file_19: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_53/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_53-main.zip</a> // 148.6 megabytes
 
-    - zip_file_20: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_54/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_54-main_[undefined_day].zip</a> // ??? megabytes
+    - zip_file_20: <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/raw_github_files_directory_KARLINA_OBJECT_extension_pack_54/" target="_blank" rel="noopener">KARLINA_OBJECT_extension_pack_54-main_18january2026.zip</a> // 1.3 megabytes
 
     - zip_file_21: <strong>karbytes_wayback_machine_saves_precision_batches-main.zip</strong> // 829.7 kilobytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com). 
 
     - zip_file_22: <strong>karbytes_wayback_machine_saves_precision_batches_extension_0-main.zip</strong> // 157.2 kilobytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com).
 
-    - zip_file_23: <strong>karbytes_wayback_machine_saves_precision_batches_extension_1-main_18january2026.zip</strong> // 37.2 kilobytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com).
+    - zip_file_23: <strong>karbytes_wayback_machine_saves_precision_batches_extension_1-main_18january2026.zip</strong> // 40.9 kilobytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com).
 
     - zip_file_24: <strong>karbytes_basement_46-main.zip</strong> // 94.8 megabytes; downloaded from a private karbytes-created GitHub repository; may contain some public karbytes content in the form of "unlisted web page" source code and associated media files (for the website named Karbytes For Life Blog dot WordPress dot Com).
 
