--- a/unlisted_web_page_karbytes_wayback_machine_saves_precision_batches_extension_1.html
+++ b/unlisted_web_page_karbytes_wayback_machine_saves_precision_batches_extension_1.html
@@ -3,7 +3,7 @@
  * file: index.html
  * type: Hyper-Text-Markup-Language
  * author: karbytes
- * date: 18_JANUARY_2026
+ * date: 19_JANUARY_2026
  * license: PUBLIC_DOMAIN
  */
  -->
@@ -108,6 +108,8 @@
 
 <p>sub-index_page_26:  <a style="background: #00ff00;color: #000000" href="https://karbytessupporter.github.io/karbytes_wayback_machine_saves_precision_batches_extension_1/sub-index_page_26.html" target="_blank" rel="noopener">https://karbytessupporter.github.io/karbytes_wayback_machine_saves_precision_batches_extension_1/sub-index_page_26.html</a></p>
 
+<p>sub-index_page_27:  <a style="background: #00ff00;color: #000000" href="https://karbytessupporter.github.io/karbytes_wayback_machine_saves_precision_batches_extension_1/sub-index_page_27.html" target="_blank" rel="noopener">https://karbytessupporter.github.io/karbytes_wayback_machine_saves_precision_batches_extension_1/sub-index_page_27.html</a></p>
+
 <hr>
   
 <p><strong style="background:#ffff00;color:#000000">raw_github_files_directory_KARBYTES_SOFTWARE_ENGINEERING_PORTFOLIO</strong></p>
@@ -128,7 +130,7 @@
 
 <hr>
  
-<p>This HTML file was last updated on 18_JANUARY_2026.</p>
+<p>This HTML file was last updated on 19_JANUARY_2026.</p>
 
 <hr>
   
