--- a/unlisted_web_page_karbytes_social_media_posts_koep54.html
+++ b/unlisted_web_page_karbytes_social_media_posts_koep54.html
@@ -8,7 +8,7 @@
 /**
  * file: <a style="background: #000000;color: #ff9000" href="https://raw.githubusercontent.com/karlinarayberinger/KARLINA_OBJECT_extension_pack_54/main/karbytes_social_media_posts.txt" target="_blank" rel="noopener noreferrer">karbytes_social_media_posts.txt</a>
  * type: plain-text
- * date: 18_JANUARY_2026
+ * date: 19_JANUARY_2026
  * author: <a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/about_karbytes/" target="_blank" rel="noopener noreferrer">karbytes</a>
  * license: <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a>
  */
@@ -16,7 +16,25 @@
 On 18_JANUARY_2026 at approximately 12:30PM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
   
 <a style="background: #000000;color: #00ff00" href="https://karbytesforlifeblog.wordpress.com/journal_karbytes_18january2026/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/journal_karbytes_18january2026/</a>
+
+* * *
+
+On 19_JANUARY_2026 at approximately 8:00AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+  
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_19january2026/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_19january2026/</a>
+
+* * *
+
+On 19_JANUARY_2026 at approximately 8:00AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+  
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_20january2026/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_20january2026/</a>
+
+* * *
+
+On 19_JANUARY_2026 at approximately 8:00AM Pacific Standard Time, karbytes shared the following karbytes-created web page as a social media post on karbytes' Twitter dot Com page, on karbytes' Minds dot Com page, on karbytes' LinkedIn dot Com page, on karbytes' Patreon dot Com page, and on karbytes' Bluesky dot Com page:
+  
+<a style="background: #000000;color: #ff9000" href="https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_21january2026/" target="_blank" rel="noopener noreferrer">https://karbytesforlifeblog.wordpress.com/chatgpt_karbytes_21january2026/</a>
 </pre>
 <hr />
-<p>This web page was last updated on 18_JANUARY_2026. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This web page was last updated on 19_JANUARY_2026. The content displayed on this web page is licensed as <a style="background: #000000;color: #ff9000" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener noreferrer">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
